# Unified-Entity-Cards

./: .gitignore  README.md
examples/: character.uec  character_v2.uec  persona.uec  persona_v2.uec
js/: README.md  package.json
js/src/: constants.js  convert.js  create.js  index.d.ts  index.js  tools.js  utils.js  validate.js
js/src/validators/: assetLocator.js  characterBook.js  meta.js  payloadV1.js  payloadV2.js  scene.js  schema.js  voiceConfig.js
js/test/: index.test.js
python/: README.md  pyproject.toml
python/tests/: test_v2_and_tools.py
python/uec/: __init__.py  constants.py  convert.py  create.py  tools.py  types.py  utils.py  validators.py
rust/: Cargo.toml  README.md
rust/src/: constants.rs  convert.rs  create.rs  lib.rs  tools.rs  types.rs  utils.rs  validators.rs
rust/tests/: v2_and_tools_test.rs
