[package]
name = "unified-entity-card"
version = "0.2.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "Unified Entity Card helpers for validating UEC JSON payloads."
repository = "https://github.com/LettuceAI/Unified-Entity-Cards"
keywords = ["uec", "character-card", "persona", "schema", "llm"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
